--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    {% block main %} {% endblock %}
+
+    <div class="container text-center">
+        {% block main %} {% endblock %}
+    </div>
 </body>
 </html>
