implementação inicial de login e logout

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,7 +9,10 @@
         Column
     </div>
     <div class="col">
-        Column
+       <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
+           <button type="submit">Logout</button>
+       </form>
     </div>
 </div>
 {% endblock %}
