--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -5,14 +5,21 @@
     <div class="col">
         Column
     </div>
-    <div class="col">
-        Column
     </div>
     <div class="col">
-       <form method="post" action="{% url 'logout' %}">
-            {% csrf_token %}
-           <button type="submit">Logout</button>
-       </form>
+        Olá {{ usuario.funcionario.nome }}
+    </div>
+    <div class="col">
+<!--       <form method="post" action="{% url 'logout' %}">-->
+<!--            {% csrf_token %}-->
+<!--           <button type="submit">Logout</button>-->
+<!--       </form>-->
+        <a href="{% url 'logout'%} ">Logout</a>
+        {% if usuario.funcionario.empresa %}
+            <a href="{% url 'edit_empresa' usuario.funcionario.empresa.id %}">Editar Empresa</a>
+        {% else %}
+            <a href="{% url 'create_empresa' %}">Criar Empresa</a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
